services/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    networking.gke.io/managed-certificates: cert
    networking.gke.io/frontend-config: default-frontend-config
spec:
  rules:
  - host: placeholder.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              number: 80
